# pydanticai-rag-primer

./: README.md  pyproject.toml  requirements.txt
docs/: llm-agentic-solutions-guide.md  pydanticai-rag-diagram.md  rag-implementation-summary.md  rag-pydantic-ai-implementation.md
examples/: README.md  pyproject.toml  rag.py  rag_api.py  rag_inference.py  rag_ingestion.py  rag_postgres_validation.ipynb
pydantic_ai/: __init__.py
